feat: Swagger DB 테스트 API 추가
